# artifact-parser

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
.claude/agents/: parser-author.md
.claude/commands/: codegen.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  schema-watch.yml
docs/design/: parquet-extra.md
src/artifact_parser/: __init__.py
src/artifact_parser/core/: __init__.py  base.py  exceptions.py  parser.py  registry.py
src/artifact_parser/dbt/: __init__.py  plugin.py  utils.py
src/codegen/: __init__.py  __main__.py  cli.py
src/codegen/dbt/: __init__.py  artifact_spec.py  generator.py  paths.py  versions.py
src/codegen/dbt/templates/: generated_init.py.jinja  parser.py.jinja  version_map.py.jinja  versions.py.jinja
tests/: conftest.py
tests/artifact_parser/core/: test_registry.py
tests/artifact_parser/dbt/: test_parser.py  test_roundtrip.py  test_utils.py
tests/codegen/: test_cli.py
tests/codegen/dbt/: test_generator.py  test_io.py
tests/data/: catalog_v1.json  manifest_v12.json  run-results_v6.json
