[project]
name = "artifact-parser"
dynamic = ["version"]
description = "A pluggable framework for parsing data tool artifacts into typed Python models — dbt-core first."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dat Nguyen", email = "datnguyen.it09@gmail.com" }]
keywords = ["dbt", "artifacts", "manifest", "catalog", "parser", "pydantic"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dbt = []
codegen = [
  "datamodel-code-generator>=0.63.0",
  "jinja2>=3.1",
  "typer>=0.26.7",
]

[project.scripts]
codegen = "codegen.cli:main"

[project.urls]
Homepage = "https://github.com/datnguye/artifact-parser"
Repository = "https://github.com/datnguye/artifact-parser"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/artifact_parser", "src/codegen"]
artifacts = [
  "src/artifact_parser/py.typed",
  "src/artifact_parser/dbt/resources/**/*.json",
  "src/codegen/dbt/templates/*.jinja",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/artifact_parser",
  "src/codegen",
  "README.md",
  "LICENSE",
]

[dependency-groups]
dev = [
  "artifact-parser[codegen,dbt]",
  "pre-commit>=4.6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["artifact_parser", "codegen"]

[tool.ruff.lint.per-file-ignores]
"src/artifact_parser/dbt/generated/**/*.py" = ["E501", "I", "UP", "B", "SIM"]
"src/codegen/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["artifact_parser", "codegen"]
branch = true
omit = [
  "src/artifact_parser/dbt/generated/*.py",
  "src/artifact_parser/dbt/generated/models/*/*.py",
  "src/codegen/__main__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
  "pragma: no cover",
]
